k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-web-app
  labels:
    app: auth-web-app
