k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-server
  ports:
    - port: 80
      targetPort: 8080
