k8s/fanout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fanout-service
spec:
  selector:
    app: fanout-proxy
  ports:
    - port: 80
      targetPort: 8080
